fix: title and description

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tempo restante para o Gabriel entrar de férias e voltar para Minas Gerais"
+      content="Tempo restante para o ir para faculdade"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Go to Minas</title>
+    <title>Go to Faculdade</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
