chore: update date to meet olivia

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tempo restante para o ir para faculdade"
+      content="Tempo restante eu encontrar a melhor e mais linda namorada do mundo!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Go to Faculdade</title>
+    <title>Go to meet my love ❤️</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
